[package]
name = "base2048"
version = "0.1.0"
edition = "2021"
exclude = ["/dist"]

[lib]
name = "base2048"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
hashbrown = "0.12.3"

[dev-dependencies]
rstest = "0.15.0"

[package.metadata.maturin]
python-source = "src-py"

[dependencies.pyo3]
version = "0.17.1"
features = ["extension-module", "abi3-py37"]
