[project]
name = "base2048"
description = "Binary encoding with Base2048 in Rust."
version = "0.1.1"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
keywords = ["base2048", "base64", "base-encoding", "encoding", "decoding"]

[project.optional-dependencies]
dev = [
    "maturin",
    "pytest",
    "pytest-cov",
    "frelatage",
]

[tool.maturin]
python-source = "src-py"

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"
