[project]
name = "base2048"
description = "Binary encoding with Base2048 in Rust."
version = "0.1.2"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["base2048", "base64", "base-encoding", "encoding", "decoding"]

[project.optional-dependencies]
dev = [
    "maturin",
    "pytest",
    "pytest-cov",
]
fuzz = [
    "frelatage",
]

[tool.maturin]
python-source = "src-py"

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"
